--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,16 @@
 <html>
-	<body style="background: #333">
-		<div style="color: #eee; font-family: sans-serif; font-size: xx-large; text-align: center">
-			Hello world!
-		</div>
-	</body>
+<head>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script defer src="api.js"></script>
+</head>
+<body style="background: #333">
+<div>
+	<div style="color: #eee; font-family: sans-serif; font-size: xx-large; text-align: center">
+		Hello world!
+	</div>
+	<div>
+		<button onClick="makeRequestAndLog()">Make HTTP request and log to console</button>
+	</div>
+</div>
+</body>
 </html>
