Add db querying to backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script defer src="api.js"></script>
 </head>
 <body style="background: #333">
