Split inventory page into frontend+backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 		Hello world!
 	</div>
 	<div>
-		<button onClick="makeRequestAndLog()">Make HTTP request and log to console</button>
+		<a href="inventory.html">Inventory page</a>
 	</div>
 </div>
 </body>
