--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-	<script defer src="api.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="api.js"></script>
 </head>
 <body style="background: #333">
 <div>
