Link inventory modal to customer facing page

--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>Inventory For Group 108</title>
+	<title>Inventory</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="modal.css">
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<noscript>JavaScript must be enabled.</noscript>
+	<h1>Inventory management view</h1>
 	<form method="get" action="details.html">
 		<label>Select a product for more information.</label>
 		<table id="products">
