Add checkout (WIP)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,17 @@
 <html>
 <head>
+	<title>Web Store</title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="styles.css">
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 </head>
-<body style="background: #333">
+<body></body>
 <div>
-	<div style="color: #eee; font-family: sans-serif; font-size: xx-large; text-align: center">
-		Hello world!
-	</div>
-	<div>
-		<a href="inventory.html">Inventory page</a>
-	</div>
+	<h1>Hello world!</h1>
+	<div><a href="inventory.html">Inventory page</a></div>
+	<div><a href="details.html">Details page</a></div>
+	<div><a href="login.html">Login page</a></div>
 </div>
 </body>
 </html>
