--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<noscript>JavaScript must be enabled.</noscript>
+	<h1>Login</h1>
 	<form onsubmit="processLogin(); return false;">
 		<input id="email" type="text" placeholder="Email address"></input>
 		<button>Submit</button>
