Add more navigation

--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -10,6 +10,8 @@
 <body>
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Shopping cart</h1>
+	<a href="index.html">...Homepage</a>
+	<p></p>
 	<label for="cart-items">Contents</label>
 	<table id="cart-items">
 		<tr>
