--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,17 @@
 	<link rel="stylesheet" href="styles.css">
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
+	<script defer src="index.js"></script>
 </head>
 <body></body>
 <div>
 	<h1>Hello world!</h1>
+	<div id="login-status" class="sub-header">Loading login status</div>
+	<p></p>
 	<div><a href="inventory.html">Inventory page</a></div>
 	<div><a href="details.html">Details page</a></div>
 	<div><a href="login.html">Login page</a></div>
+	<div><a href="checkout.html">Shopping cart page</a></div>
 </div>
 </body>
 </html>
