--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -11,6 +11,8 @@
 <body>
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Inventory management view</h1>
+	<a href="index.html">...Homepage</a>
+	<p></p>
 	<label for="products">Select a product for more information.</label>
 	<table id="products">
 		<tr>
