--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,6 +10,8 @@
 <body>
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Login</h1>
+	<a href="index.html">...Homepage</a>
+	<p></p>
 	<form onsubmit="processLogin(); return false;">
 		<input id="email" type="text" placeholder="Email address"></input>
 		<button>Submit</button>
