--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -31,6 +31,17 @@
 	</script>
 </head>
 <body>
+	<!-- Top of page header-->
+	<div class="navbar">
+		<a href="index.html">Storefront</a>
+		<a href="inventory.html">Inventory</a>
+
+		<div class="navbar-right">
+			<a href="#">Log In</a>
+			<a href="#"><img src="img/shopping-cart-light.png"></a>
+		</div>
+	</div>
+
 	<noscript>JavaScript must be enabled.</noscript>
 	<form id="Inventory" method="post" action="details.php">
 		<br><label>Select a product for more information.</label><br>
