--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -1,13 +1,20 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Inventory</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="styles.css">
+
+	<!-- CSS link -->
+	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="modal.css">
+
+	<!-- JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 	<script defer src="inventory.js"></script>
 </head>
+
 <body>
 	<!-- Top of page header-->
 	<div class="navbar">
@@ -15,8 +22,8 @@
 		<a href="inventory.html">Inventory</a>
 
 		<div class="navbar-right">
-			<a href="#">Log In</a>
-			<a href="#"><img src="img/shopping-cart-light.png"></a>
+			<a href="login.html">Log In</a>
+			<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
 		</div>
 	</div>
 
