--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,5 +33,16 @@
 		as well as option to add to cart.
 	</div>
 </div>
+<div>
+	<span class="white-gold">TODO: probably delete this section</span>
+	<h1>Web Store</h1>
+	<div id="login-status" class="sub-header">Loading login status</div>
+	<p></p>
+	<div><a href="details.html">Product details</a></div>
+	<br>
+	<div><a href="checkout.html">Shopping cart</a></div>
+	<br>
+	<div><a href="inventory.html">Inventory management</a></div>
+</div>
 </body>
 </html>
