--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -15,21 +15,21 @@
 </head>
 
 <body>
-	<!-- Top of page header-->
-	<div class="navbar">
-		<a href="index.html">Storefront</a>
-		<a href="inventory.html">Inventory</a>
-
-		<div class="navbar-right">
-			<a href="login.html">Log In</a>
-			<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
-		</div>
+<!-- Top of page header-->
+<div class="navbar">
+	<a href="index.html">Storefront</a>
+	<a href="inventory.html">Inventory</a>
+	
+	<div class="navbar-right">
+		<a href="login.html">Log In</a>
+		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
 	</div>
+</div>
 
+<div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Shopping cart</h1>
-	<a href="index.html">...Homepage</a>
-	<p></p>
+	<p><p>
 	<label for="cart-items">Contents</label>
 	<table id="cart-items">
 		<tr>
@@ -54,5 +54,6 @@
 		<br>
 		<button>Submit</button>
 	</form>
+</div>
 </body>
 </html>
