--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,14 +24,11 @@
 		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
 	</div>
 </div>
-  
 <div id="login-status" class="sub-header">Loading login status</div>
 
-<div>
-	<div style="color: black; font-family: sans-serif; font-size: xx-large; text-align: center">
-		Store items & their info will go here
-		as well as option to add to cart.
-	</div>
+<div class="content">
+	<h1>Items for sale</h1>
+	<p><p>
 </div>
 </body>
 </html>
