--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -16,20 +16,20 @@
 </head>
 
 <body>
-	<!-- Top of page header-->
-	<div class="navbar">
-		<a href="index.html">Storefront</a>
-		<a href="inventory.html">Inventory</a>
+<!-- Top of page header-->
+<div class="navbar">
+	<a href="index.html">Storefront</a>
+	<a href="inventory.html">Inventory</a>
 
-		<div class="navbar-right">
-			<a href="login.html">Log In</a>
-			<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
-		</div>
+	<div class="navbar-right">
+		<a href="login.html">Log In</a>
+		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
 	</div>
+</div>
 
+<div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Inventory management view</h1>
-	<a href="index.html">...Homepage</a>
 	<p></p>
 	<label for="products">Select a product for more information.</label>
 	<table id="products">
@@ -46,5 +46,6 @@
 			<div id="modal-loaded-content"></div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
