--- a/frontend/login.html
+++ b/frontend/login.html
@@ -15,24 +15,25 @@
 </head>
 
 <body>
-	<!-- Top of page header-->
-	<div class="navbar">
-		<a href="index.html">Storefront</a>
-		<a href="inventory.html">Inventory</a>
+<!-- Top of page header-->
+<div class="navbar">
+	<a href="index.html">Storefront</a>
+	<a href="inventory.html">Inventory</a>
 
-		<div class="navbar-right">
-			<a href="login.html">Log In</a>
-			<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
-		</div>
+	<div class="navbar-right">
+		<a href="login.html">Log In</a>
+		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
 	</div>
+</div>
 
+<div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
 	<h1>Login</h1>
-	<a href="index.html">...Homepage</a>
-	<p></p>
+	<p><p>
 	<form onsubmit="processLogin(); return false;">
 		<input id="email" type="text" placeholder="Email address"></input>
 		<button>Submit</button>
 	</form>
+</div>
 </body>
 </html>
