Storefront layout & product detail display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,19 +27,17 @@
 <div id="login-status" class="sub-header">Loading login status</div>
 
 <div class="content">
-	<h1>Items for sale</h1>
-	<p><p>
-</div>
-<div>
-	<span class="white-gold">TODO: probably delete this section</span>
-	<h1>Web Store</h1>
-	<div id="login-status" class="sub-header">Loading login status</div>
+	<noscript>JavaScript must be enabled.</noscript>
+	<h1>Products for Sale</h1>
 	<p></p>
-	<div><a href="details.html">Product details</a></div>
-	<br>
-	<div><a href="checkout.html">Shopping cart</a></div>
-	<br>
-	<div><a href="inventory.html">Inventory management</a></div>
+	<label for="products">Select a product for more information.</label>
+	<table id="products">
+		<tr>
+			<th>Product Name</th>
+			<th>Price</th>
+		</tr>
+		<span id="products-placeholder">Loading...</span>
+	</table>
 </div>
 </body>
 </html>
