--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -12,6 +12,7 @@
 	<!-- JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
+	<script defer src="login-indicator.js"></script>
 	<script defer src="inventory.js"></script>
 </head>
 
@@ -22,8 +23,8 @@
 	<a href="inventory.html">Inventory</a>
 
 	<div class="navbar-right">
-		<a href="login.html">Log In</a>
 		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
+		<span id="login-status" class="sub-header">Loading login status</span>
 	</div>
 </div>
 
