--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,6 +11,7 @@
 	<!-- JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
+	<script defer src="login-indicator.js"></script>
 	<script defer src="login.js"></script>
 </head>
 
@@ -21,8 +22,8 @@
 	<a href="inventory.html">Inventory</a>
 
 	<div class="navbar-right">
-		<a href="login.html">Log In</a>
 		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
+		<span id="login-status" class="sub-header">Loading login status</span>
 	</div>
 </div>
 
