--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -33,7 +33,8 @@
 	<h1>Inventory management view</h1>
 	<p></p>
 	<label for="products">Select a product for more information.</label>
-	<table id="products">
+	<p></p>
+	<table id="products" class="banded-table">
 		<tr>
 			<th>Part name</th>
 			<th>Price</th>
