--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
 
 	<!-- CSS link -->
 	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="modal.css" />
 
 	<!-- JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -38,6 +39,12 @@
 		</tr>
 		<span id="products-placeholder">Loading...</span>
 	</table>
+	<div id="details-modal" class="modal">
+		<div class="modal-content">
+			<span id="modal-content-placeholder">Loading...</span>
+			<div id="modal-loaded-content"></div>
+		</div>
+	</div>
 </div>
 </body>
 </html>
