--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
 	<a href="inventory.html">Inventory</a>
 
 	<span class="navbar-right">
-		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
+		<a href="cart.html"><img src="img/shopping-cart-light.png"></a>
 		<span id="login-status" class="sub-header">Loading login status</span>
 	</span>
 </div>
@@ -32,7 +32,8 @@
 	<h1>Products for Sale</h1>
 	<p></p>
 	<label for="products">Select a product for more information.</label>
-	<table id="products">
+	<p></p>
+	<table id="products" class="banded-table">
 		<tr>
 			<th>Product Name</th>
 			<th>Price</th>
