--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -23,7 +23,7 @@
 	<a href="inventory.html">Inventory</a>
 
 	<div class="navbar-right">
-		<a href="checkout.html"><img src="img/shopping-cart-light.png"></a>
+		<a href="cart.html"><img src="img/shopping-cart-light.png"></a>
 		<span id="login-status" class="sub-header">Loading login status</span>
 	</div>
 </div>
