--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,28 +18,33 @@
 <body>
 <!-- Top of page header-->
 <div class="navbar">
-	<a href="index.html">Storefront</a>
+	<a href="index.html"><h2 class="logo">Saks 108th Avenue</h2></a>
 	<a href="inventory.html">Inventory</a>
 
 	<span class="navbar-right">
-		<a href="cart.html"><img src="img/shopping-cart-light.png"></a>
+		<a href="cart.html">
+			<span class="vert-top">Cart</span>
+			<img src="img/shopping-cart-light.png">
+		</a>
 		<span id="login-status" class="sub-header">Loading login status</span>
 	</span>
 </div>
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h1>Products for Sale</h1>
+	<h2>Products for Sale</h2>
 	<p></p>
 	<label for="products">Select a product for more information.</label>
 	<p></p>
-	<table id="products" class="banded-table">
-		<tr>
-			<th>Product Name</th>
-			<th>Price</th>
-		</tr>
-		<span id="products-placeholder">Loading...</span>
-	</table>
+	<div class="scrollable">
+		<table id="products" class="banded-table">
+			<tr>
+				<th>Product Name</th>
+				<th>Price</th>
+			</tr>
+			<span id="products-placeholder">Loading...</span>
+		</table>
+	</div>
 	<div id="details-modal" class="modal">
 		<div class="modal-content">
 			<span id="modal-content-placeholder">Loading...</span>
