--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Shopping Cart</title>
+	<title>Order confirmation</title>
 
 	<!-- CSS link -->
 	<link rel="stylesheet" href="styles.css" />
@@ -18,57 +18,32 @@
 <body>
 <!-- Top of page header-->
 <div class="navbar">
-	<a href="index.html">Storefront</a>
+	<a href="index.html"><h2 class="logo">Saks 108th Avenue</h2></a>
 	<a href="inventory.html">Inventory</a>
 	
 	<div class="navbar-right">
-		<a href="cart.html"><img src="img/shopping-cart-light.png"></a>
+		<a href="cart.html">
+			<span class="vert-top">Cart</span>
+			<img src="img/shopping-cart-light.png">
+		</a>
 		<span id="login-status" class="sub-header">Loading login status</span>
 	</div>
 </div>
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h1>Shopping cart</h1>
+	<h2>Order confirmed</h2>
 	<p><p>
-	<label for="cart-items">Contents</label>
-	<table id="cart-items">
-		<tr>
-			<th>Part name</th>
-			<th>Price</th>
-			<th>Quantity selected</th>
-		</tr>
-		<span id="cart-items-placeholder">Loading...</span>
-	</table>
-	<br>
-	<form onsubmit="placeOrder(); return false" class="right-center">
-		<label for="shipping-address">Shipping address</label>
-		<textarea
-			id="shipping-address"
-			placeholder="Recipient Name&#10;123 Gravel Rd Unit 345&#10;McKinney, AL 98103"
-			rows="3"
-		></textarea>
-		<br>
-		<label for="phone-number">Phone number of recipient</label>
-		<input type="text" id="phone-number">
-		<br>
-		<label for="name-on-card">Name on card</label>
-		<input type="text" id="name-on-card">
-		<br>
-		<label for="card-number">Card number</label>
-		<input type="text" id="card-number">
-		<br>
-		<label for="card-exp">Card expiration date</label>
-		<input type="text" id="card-exp" placeholder="MM/YY">
-		<br>
-		<label for="card-cvv">Card security code</label>
-		<input type="text" id="card-cvv">
-		<br>
-		<label for="card-zipcode">Zipcode on billing address</label>
-		<input type="text" id="card-zipcode">
-		<br>
-		<button>Place order</button>
-	</form>
+	<div class="scrollable">
+		<table id="cart-items">
+			<tr>
+				<th>Part name</th>
+				<th>Price</th>
+				<th>Quantity selected</th>
+			</tr>
+			<span id="cart-items-placeholder">Loading...</span>
+		</table>
+	</div>
 </div>
 </body>
 </html>
