Add customer order history page

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -35,13 +35,13 @@
 	<h2>Order confirmed</h2>
 	<p><p>
 	<div class="scrollable">
-		<table id="cart-items">
+		<table id="order-items">
 			<tr>
 				<th>Part name</th>
 				<th>Price</th>
 				<th>Quantity selected</th>
 			</tr>
-			<span id="cart-items-placeholder">Loading...</span>
+			<span id="order-items-placeholder">Loading...</span>
 		</table>
 	</div>
 </div>
