--- a/frontend/customer-orders.html
+++ b/frontend/customer-orders.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 	<script defer src="login-indicator.js"></script>
-	<script defer src="inventory.js"></script>
+	<script defer src="customer-orders.js"></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h2>Inventory management view</h2>
+	<h2>Your order history</h2>
 	<p></p>
 	<label for="orders">Select an order for more information.</label>
 	<p></p>
