Complete customer order page

--- a/frontend/customer-orders.html
+++ b/frontend/customer-orders.html
@@ -29,9 +29,9 @@
 	<div class="scrollable">
 		<table id="orders" class="banded-table">
 			<tr>
-				<th>Part name</th>
-				<th>Price</th>
-				<th>Number in stock</th>
+				<th>Order number</th>
+				<th>Total paid</th>
+				<th>Status</th>
 			</tr>
 			<span id="orders-placeholder">Loading...</span>
 		</table>
