bottom navbar cleanup, now on all pages

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -42,5 +42,9 @@
 		Continue to checkout
 	</button>
 </div>
+
+<!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
+<div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
