--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -72,5 +72,9 @@
 		<button class="gold">Place order</button>
 	</form>
 </div>
+
+<!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
+<div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
