--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -34,5 +34,9 @@
 		</table>
 	</div>
 </div>
+
+<!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
+<div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
