--- a/frontend/customer-orders.html
+++ b/frontend/customer-orders.html
@@ -43,5 +43,9 @@
 		</div>
 	</div>
 </div>
+
+<!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
+<div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
