--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,7 @@
 </div>
 
 <!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
 <div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
