--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,5 +28,9 @@
 		<button>Submit</button>
 	</form>
 </div>
+
+<!-- Bottom page navbar-->
+<div class="bottom-text"><p>Employee Site Management</p></div>
+<div class="navbar" id="bottom-navbar"></div>
 </body>
 </html>
