--- a/frontend/all-orders.html
+++ b/frontend/all-orders.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Inventory</title>
+	<title>All orders</title>
 
 	<!-- CSS link -->
 	<link rel="stylesheet" href="styles.css" />
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 	<script defer src="navbar.js"></script>
-	<script defer src=""></script>
+	<script defer src="all-orders.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h2>Your order history</h2>
+	<h2>All orders</h2>
 	<p></p>
 	<label for="orders">Select an order for more information.</label>
 	<p></p>
