Employee Order Displaying

--- a/frontend/outstanding-orders.html
+++ b/frontend/outstanding-orders.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 	<script defer src="navbar.js"></script>
-	<script defer src=""></script>
+	<script defer src="outstanding-orders.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h2>Your order history</h2>
+	<h2>Unshipped Orders</h2>
 	<p></p>
 	<label for="orders">Select an order for more information.</label>
 	<p></p>
