--- a/frontend/all-orders.html
+++ b/frontend/all-orders.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="api.js"></script>
 	<script defer src="navbar.js"></script>
-	<script defer src=""></script>
+	<script defer src="all-orders.js"></script>
 </head>
 
 <body>
@@ -22,15 +22,15 @@
 
 <div class="content">
 	<noscript>JavaScript must be enabled.</noscript>
-	<h2>Your order history</h2>
+	<h2>Order Control Panel</h2>
 	<p></p>
-	<label for="orders">Select an order for more information.</label>
+	<label for="orders">Select an order to manage.</label>
 	<p></p>
 	<div class="scrollable">
 		<table id="orders" class="banded-table">
 			<tr>
 				<th>Order number</th>
-				<th>Total paid</th>
+				<th>Customer Name</th>
 				<th>Status</th>
 			</tr>
 			<span id="orders-placeholder">Loading...</span>
