--- a/frontend/all-orders.html
+++ b/frontend/all-orders.html
@@ -30,10 +30,10 @@
 		<table id="orders" class="banded-table">
 			<tr>
 				<th>Order number</th>
-				<th>User Email</th>
+                <th>Customer Email</th>
 				<th>Total paid</th>
 				<th>Status</th>
-				<th>Notes</th>
+                <th>Notes</th>
 			</tr>
 			<span id="orders-placeholder">Loading...</span>
 		</table>
