Add info dump to each modal bottom

--- a/frontend/outstanding-orders.html
+++ b/frontend/outstanding-orders.html
@@ -30,6 +30,7 @@
 		<table id="orders" class="banded-table">
 			<tr>
 				<th>Order number</th>
+				<th>Customer email</th>
 				<th>Total paid</th>
 				<th>Status</th>
 			</tr>
